filter tweets in discovery page by language fix #996
Former-commit-id: 018a82013812b5168ada180043c0314528c81f6e [formerly 4d50892e7d894a0b7e0d80d9e4fb0e250b946bf5] [formerly 7092cb1ab940f54aa026272f9c0374f3851be573 [formerly 4238e9e7f869690748202a00762eed3b1ca8387f]]
Former-commit-id: 5fbab0de95158b1759770805ddcb77bdfc53c197 [formerly 0345d740bf9f276c9eeb99ff19ca0c80986cf50e]
Former-commit-id: 75f82d34c95f0d740a4e64c82660c627278256e2

--- a/templates/admin/users/user_new.html
+++ b/templates/admin/users/user_new.html
@@ -101,7 +101,7 @@
                                 </div>
                             </div>
                             <div class="col-md-12">
-                                 <a class="btn red newBtn pull-right" ng-click="addNewUser(message)"  >
+                                 <a class="btn red newBtn pull-right" href="/#/admin/users" ng-click="addNewUser(message)"  >
                                               Invite    
                                             </a>
                             </div>
