before pull from tedj
Former-commit-id: f2fc2f07b1af846ecafd6d6c2c529b8bd8eceda8 [formerly 68eb20daad14505f19675f4f7f31d4ef1965519e] [formerly 5d5bbad4cf4df86bdd26a4be704b5c831fb04c3a [formerly d39a92ebcdd98e68a929c9f281dd5cd9b6a1629b]]
Former-commit-id: 326884669389d7a29bddedf43a34a5339a51f310 [formerly d9565292072a8a6220ef074b03445a2001a9a5fc]
Former-commit-id: a850fb637232fa6ca6b709333ec2687cec9619b6

--- a/templates/activities/task_show.html
+++ b/templates/activities/task_show.html
@@ -337,17 +337,18 @@
 
     </div>
     <!-- tasks cards -->
-<div class="col-md-3 tasks-col">
+<div class="col-md-3 tasks-col hidden-sm hidden-xs " >
   <div class="row">
     <div class="col-md-12">
         <div class="portlet showCard">
             <div class="portlet-title line">
-              <div class="caption">
-               <!-- <i class="icon-user"></i>{{ _('Who\'s involved')}}-->
+              <div class="caption">               
+                  {{ _("Add Tasks directly from Gmail")}}              
               </div>
             </div>
             <div class="portlet-body">
-            
+              <input type="submit" onclick="chrome.webstore.install()"  class="btn blue btn-block pull-right" value="Install chrome extension" style="padding-left:5px;padding-right:5px;">
+              <div class="clearfix"></div>
             </div>
         </div>
     </div>
