fixing tasks page problem
Former-commit-id: 607f7b79d1c5f48acbbc5aa8f6292b98400bcfe3 [formerly ecbf0acfcab19d737cc5fa9bd86a12e1818b594e] [formerly 2596ceb712203d8a4f4d812221bc0bf6aee7159e [formerly 62ed9e0b9a41f60ad291bc515751fb487917b2ab]]
Former-commit-id: 1ccb814a0c7ca7f50f72ebcbf99f08ecbed6bd7c [formerly 6ec94f31501fd771d6cfd6fbc1cc5686fa52ee0e]
Former-commit-id: 2fe9c35e6d7309f36393d99841537266e13ffcfe

--- a/templates/activities/all_tasks.html
+++ b/templates/activities/all_tasks.html
@@ -214,12 +214,13 @@
                                   <li class="labelsCardElement taskCard list-group-item" ng-show="showTagsFilter">
                                       <button type="button" class="close"  aria-hidden="true" ng-click="hideTagFilterCard()"></button>
                                       <ul class="list-group tags-list">
-                                      <li ng-repeat="tag_item in tags" class="list-group-item tags-list-item"  >
+                                      <li ng-repeat="tag_item in tags innerTagItem" class="list-group-item tags-list-item"  >
                                         <div class="row">
                                           <span  ng-drag="dragTag(tag_item)" draggable class="with-color" ng-dblclick="editTag(tag_item)" ng-show="(tag_item!=edited_tag)||(!manage_tags)" style="background-color:<%=tag_item.color%>;color:<%=idealTextColor(tag_item.color)%>;">
+                                            <input type="checkbox" ng-show="!manage_tags" ng-click="selectTag(tag_item,$index,$event)" style="margin-left: 3px;" class="customCheck" ng-checked="isSelected()">
                                               <%= tag_item.name %>
                                           </span>
-                                           <input type="checkbox" ng-show="!manage_tags" ng-click="selectTag(tag_item,$index,$event)" style="margin-right: 10px;" class="pull-right customCheck" ng-checked="isSelected()">
+                                           
                                           <form ng-submit="doneEditTag(tag_item)" ng-show="(tag_item==edited_tag)&&(manage_tags)">
                                             <input ng-blur="doneEditTag(tag_item)" type="text" class="col-md-offset-1 col-md-7 form-control inlineEditTag " ng-model="tag_item.name">
                                           </form>
@@ -294,7 +295,7 @@
                                                 <%= task_tag.name %>
                                             </span>
                                             <span ng-repeat="assignee in task.assignees" class="pull-right">
-                                               <a href="#"> @<%= assignee.display_name %></a>
+                                               <a href="/#/admin/users/show/<%= assignee.google_user_id %>"> @<%= assignee.display_name %></a>
                                                <img alt="" src="<%= assignee.photo%>" class="user-photo" />
                                             </span>
                                         </div>
