add recent tweets in discovery page fix #1002
Former-commit-id: 0ce0c7f901072c12979ec3cc3ad09d8e88ea34b7 [formerly b9ecb5ab75155088e567b94d892627035d8241d5] [formerly 870120103e88b473b579b1846ed46abe6b689498 [formerly 2aea221918eb9954b944f00e5d0062df003c2c7c]]
Former-commit-id: 6c9731b8cfdd613a14f070ae51b39e6b74844494 [formerly 5b7404245d8f258eea4a1977ba1fee4a407b0e52]
Former-commit-id: 0050a3f175c9d57d9405f81e7b9bbcd88c5c697b

--- a/templates/discovers/discover_list.html
+++ b/templates/discovers/discover_list.html
@@ -22,8 +22,8 @@
       <div class="col-md-10 col-xs-12 filter-content">
       <div class="filterOptions">
 
-          <span role="button" class="filterItem" ng-click="filterByOwner();selectedOption ='all'" ng-class="{activeFilter: selectedOption =='all'}">{{ _('Recent')}} <span class="hidden-xs hiddenOnxs">{{ _('Posts')}}</span> </span>
-          <span role="button" class="filterItem" ng-class="{activeFilter: selectedOption =='my'}" ng-click="filterByOwner('{{ME}}');selectedOption ='my'">{{ _('Popular')}} <span class="hidden-xs hiddenOnxs">{{ _('Posts')}}</span></span>
+          <span role="button" class="filterItem" ng-click="runTheProcess();selectedOption ='all'" ng-class="{activeFilter: selectedOption =='all'}">{{ _('Recent')}} <span class="hidden-xs hiddenOnxs">{{ _('Posts')}}</span> </span>
+          <span role="button" class="filterItem" ng-class="{activeFilter: selectedOption =='my'}" ng-click="popular_tweets();selectedOption ='my'">{{ _('Popular')}} <span class="hidden-xs hiddenOnxs">{{ _('Posts')}}</span></span>
 
           
             <div class="btn-group visibleOnPhone">
@@ -129,21 +129,7 @@
         </div>
         
         <div ng-repeat="tweet in tweets" droppable  id="card_<%=$index%>"class="cardElement" ng-drop="dropTag(lead,$index)" ng-mouseenter="showClose= true" ng-mouseleave="showClose = false" style="z-index:109;overflow: visible;">
-        <div class="btn-group inCardOptionsBtn">
-            <button class="btn btn-default btn-xs dropdown-toggle" type="button" data-toggle="dropdown">
-             <i class="fa fa-ellipsis-vertical"></i>
-            </button>
-            <ul class="dropdown-menu drp-dwn-right " role="menu">
-              <li>
-               <a href="" ng-click="showAssigneeTags(lead)">
-                   <i class='fa fa-tags'></i>{{_('Add topics')}} </a>
-              </li>
-              <li>
-               <a href="" ng-click="editbeforedelete(lead)">
-                   <i class='fa fa-trash-o'></i> {{_('Delete')}} </a>
-              </li>
-            </ul>
-          </div>
+       
           <div class="detailsSection">
             <div class="head">
               <div class="pic">
