--- a/templates/cases/case_show.html
+++ b/templates/cases/case_show.html
@@ -283,15 +283,7 @@
                           <h3>{{ _('Description')}}</h3>
                           <div class="form-group row">
                               <div class="col-md-12">
-                                  <textarea id=option>
-                                                              </selectPrio>
-
-                                                            </div>
-
-                                                        </div>
-                                                      <br>
-                                                    </div>
-                                                  </div>"noteBody" class="form-control ng-pristine ng-valid" rows="3" ng-model="casee.description"></textarea>
+                                  <textarea class="form-control ng-pristine ng-valid" rows="3" ng-model="casee.description"></textarea>
                               </div>
                           </div>
                         </div>
