--- a/templates/sign-in.html
+++ b/templates/sign-in.html
@@ -1096,7 +1096,7 @@ function onSignInCallback(authResult) {
 <p class="profile-name"></p>
 <div class="google-sign">
   <button class="g-signin"
-                              data-scope="https://mail.google.com/ https://www.googleapis.com/auth/gmail.compose https://www.googleapis.com/auth/plus.login https://www.googleapis.com/auth/userinfo.email https://www.googleapis.com/auth/drive https://www.googleapis.com/auth/calendar  https://www.google.com/m8/feeds"
+                              data-scope="https://www.googleapis.com/auth/gmail.compose https://www.googleapis.com/auth/plus.login https://www.googleapis.com/auth/userinfo.email https://www.googleapis.com/auth/drive https://www.googleapis.com/auth/calendar  https://www.google.com/m8/feeds"
                               data-requestvisibleactions="http://schemas.google.com/AddActivity"
                               data-clientId="{{ CLIENT_ID }}"
                               data-accesstype="offline"
