fix  bug on filter by assignee
Former-commit-id: 085b020e3add865355b58fa88390a0ae96334db3 [formerly 11bbbf8fceded55634a036cb706860202e69ef92] [formerly 4f4a26363ab40f3623297a3b66468dcef0b9de2b [formerly 15f730a0760fc1921a0039df935f1d63a30d95d5]]
Former-commit-id: f5d3ef61b20bfc95aedf60c0e9291d8a3d25dffa [formerly 9776c4bf73235653468a9644e9cbe296a56fa241]
Former-commit-id: 363f97914bb2607f91d9f600114356ce5ce08d1b

--- a/templates/activities/all_tasks.html
+++ b/templates/activities/all_tasks.html
@@ -122,7 +122,7 @@
                       <li>
                         <div class="slimScrollDiv" style="position: relative; overflow: hidden; width: auto; height: 250px;"><ul class="dropdown-menu-list scroller" style="height: 250px; overflow: hidden; width: auto;">
                           <li ng-repeat="user in users">
-                            <a ng-click="filterByAssignee(user.google_user_id);">
+                            <a ng-click="filterByAssignee('<%= user.google_user_id %>');">
                               <span class="task">
                                 <span class="desc">
                                   <%=user.google_display_name%>
