Purchase license for organization .
Former-commit-id: c40a80848c71d9e2cf52de12c9af010bee9ab0e6 [formerly 43e5fd907de7d926f1dcd3c62448e601d37a24fb] [formerly aa4b611ba5773216fb05e99952beb5880bcb50c8 [formerly e148671633c406423392a600a1c2886211be429d]]
Former-commit-id: c075af4b320d75ab28fbd4438ebeda8c2b3ea277 [formerly bc1c7bfa1798ee93b14ee053760d68184ba456c7]
Former-commit-id: 0f0aca4b1078466e426307c93933d44c92fde120

--- a/templates/billing/billing_list.html
+++ b/templates/billing/billing_list.html
@@ -53,7 +53,8 @@
   </div>
   <div class="row" ng-show="isSignedIn">
     <div class="col-md-9">
-       <a class="btn red newBtn" href="/#/admin/users/new" >
+
+       <a class="btn red newBtn"  id="customButton" href="" >
                       {{_('Purchase license')}}    
                     </a>
 
@@ -86,13 +87,7 @@
                       Status: <%= user.status %>
                     </span>
                     <br>
-                    <span>
-                      Licenses: <%= user.nmbrOfLicenses %>
-                    </span>
-                  <br>
-                  <span>
-                      License Status: <%= user.LicenseStatus %>
-                    </span>
+              
 
 
                   </div>
@@ -142,6 +137,46 @@
     </div>
     </div>
   </div>
+
+  <!-- here where we find the license  -->
+  <div class="row">
+    <div class="col-md-3">
+         <div class="portlet showPage rightCardContent">
+                <div class="portlet-title line">
+                  <div class="caption"> <i class="fa fa-check"></i>{{ _('Licenses')}} </div>
+
+                </div>
+                <div class="newContactform portlet-body" id="chats">
+                   <ul id="tasks" class="list-unstyled lead_related_events" ng-hide="newEventform">
+                      <li ng-repeat="license in organizationInfo.licenses" id="event_<%=$index%>" class="relatedEventItem" ng-mouseenter="showDeleteBtn = true" ng-mouseleave="showDeleteBtn = false">
+                        <div class="event-container">
+                          <div class="showDescription">
+                            <span class="relatedEventTitle">
+                               <a href="/#/tasks/show/<%=task.id%>" class="discussion-content">
+                                 <%= task.title%>
+                               </a>
+                            </span>
+                            <a class="pull-right relatedEventMoreBtn">
+                              <i class="fa fa-chevron-right" ng-hide="showDetails" ng-click="showDetails=true"></i>
+                              <i class="fa fa-chevron-down" ng-show="showDetails" ng-click="showDetails=false"></i>
+                            </a>
+                            <a class="pull-left relatedEventDeleteBtn" ng-show="showDeleteBtn" ng-click="deleteTask(task)">
+                              <i class="fa fa fa-times-circle"></i>
+                            </a>
+                            <span class="relatedEventStartsAt pull-right" ng-hide="showDetails" ng-show="task.due" title="<%= task.due| date:'yyyy-MM-dd '%>">
+                                  <%= task.due | date:'dd MMM'%>
+                            </span>
+                          </div>
+                         
+                        </div>
+                      </li>
+                  </ul>
+
+                </div>
+              </div>
+    </div>
+  </div>
+  <!-- -->
 <div id="addAccountModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
               <div class="modal-dialog">
    <div class="modal-content">
