--- a/templates/accounts/account_show.html
+++ b/templates/accounts/account_show.html
@@ -119,13 +119,23 @@
                                 <div class="col-md-12">
                                     <div class="tags-section hidden" ng-class="{hidden: account.tags == null}">
                                         <div class="section-content">
-                                            <span class="pull-left">{{_('Tags')}}: </span>
+                                            <span class="pull-left"><i class="fa fa-tags"></i>{{_('Tags')}}: </span>
                                             <!-- ngRepeat: tag in account.tags -->
                                             <a ng-repeat="tag in account.tags" href="/#/search/type:Account tags:<%=tag.id%>">
                                                 <span class="pull-left task-label task-tag badge ng-scope ng-binding" style="background-color: <%=tag.color%>;color:<%=idealTextColor(tag.color)%>;">
                                                     <%= tag.name %>
                                                 </span>
                                             </a>
+                                           <a href="" ng-hide="showNewTag" ng-click="showNewTag=true" style="margin-left:10px"> +Add new tag</a>
+                                           <form ng-show="showNewTag" ng-class="newTagFormShow">
+                                                <select id="select2_sample2" class="selectTagInput form-control select2" multiple>
+                                                  <option ng-repeat="tag in tags"
+                                                  value='<%=tag.entityKey%>'>
+                                                    <%=tag.name%>
+                                                  </option>
+                                                </select>
+                                                <button type="submit" style="vertical-align: top;" ng-click="addTagsTothis();showNewTag=false" class="btn blue jfk-button btn-sm jfk-button-action">{{_('Add')}}</button>
+                                            </form>
                                         </div>
                                     </div>
                                 </div>
